<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FruPic</string>
    <string name="about">About...</string>
    <string name="about_frupic">About FruPic App</string>
    <string name="gotowebsite">Open in Browser</string>
    <string name="refresh">Refresh</string>
    <string name="details">Details</string>
    <string name="openinbrowser">Open in Browser</string>
    <string name="frupic_in_the_market">FruPic App in Google Play...</string>
    <string name="frupic_in_the_market_long">Show FruPic App in Google Play</string>
    
    <string name="details_posted_by">Posted by:</string>
    <string name="details_tags">Tags:</string>
    <string name="details_date">Date:</string>
    <string name="details_size">Image size:</string>
    <string name="details_not_available">(not available)</string>
    <string name="copy_url_to_clipboard">Copy URL</string>
    <string name="copied_to_clipboard">Text copied to clipboard</string>
    
    <string name="gallery_posted_by">%1$s</string>
    
    <string name="star_frupic">Star</string>
    <string name="mark_as_seen">Mark all seen</string>
    
    <string-array name="grid_dropdown_list">
        <item>All FruPics</item>
        <item>Unseen</item>
        <item>Starred</item>
        <item></item>
        <item>Upload</item>
        <item>Open Website</item>
        <item>Settings</item>
    </string-array>
    
    <string name="please_wait">Please wait</string>
    <string name="fetching_image_message">Fetching %1$s</string>
    <string name="download">Download</string>
    <string name="error_no_storage">External storage not available</string>
       
    <string name="waiting_to_start">scheduled...</string>

    <string name="upload">Upload</string>
    <string name="uploading_toast">Upload in progess</string>
    <string name="cancelled">Cancelled</string>
    <string name="cannot_connect">Cannot establish connection</string>
    <string name="error_reading_response">Error reading response</string>
        
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="refresh_service_count_text">%1$d new frupics</string>
    
        
    <string name="upload_to_frupic">FruPic</string>
    <string name="upload_posted_by_label">Username:</string>
    <string name="upload_posted_by_hint">Anonymous</string>
    <string name="upload_tags_label">Tags:</string>
    <string name="upload_tags_hint">tag1,tag2,tag3</string>
    <string name="upload_file_name">Upload \"%1$s\" to FruPic?</string>
    <string name="upload_file_names">Upload %1$d files to FruPic?</string>

    <string name="upload_notification_title">Uploading to FruPic</string>
    <string name="upload_notification_title_finished">Upload finished</string>
    <string name="upload_notification_progress">Uploading %1$d of %2$d images</string>
    <string name="upload_notification_success">%1$d images uploaded</string>
    <string name="upload_notification_failed">%1$d images successful, %2$d failed</string>
    
    <string name="image_resize_label">Reduce image size</string>
    
    <string name="share_link">Share Link</string>
    <string name="share_picture">Share Image</string>
        
    <string name="calculating">calculating...</string>
    <string name="preferences">Settings</string>
    <string name="preferences_cache">Cache</string>
    <string name="preferences_cache_size">Cache size limit</string>
    <string name="preferences_external_cache">Use external cache</string>
    <string name="preferences_external_cache_summary">Prefer cache on external SD card instead of internal flash</string>
    <string name="preferences_cache_clear">Clear cache</string>
    <string name="preferences_cache_clear_summary">%1$d images , %2$.1f MB (%3$.1f %%)</string>
    <string name="preferences_always_keep_starred_summary">Always keep starred FruPics in cache</string>
    <string name="preferences_always_keep_starred">Always keep starred</string>
    
    <string name="preferences_display">Display</string>
    <string name="preferences_show_animated_gifs_summary">Show animated gif images (experimental)</string>
    <string name="preferences_show_animated_gifs">Animate GIFs</string>
    
    <string name="preferences_notifications">Notifications</string>
    <string name="preferences_notifications_enabled">Enable notifications</string>
    <string name="preferences_notifications_enabled_summary">Check and notify on new images</string>
    <string name="preferences_notifications_autorefresh_interval">Refresh interval</string>
    <string name="preferences_notifications_autorefresh_interval_title">Refresh interval</string>
   
    <string name="preferences_notifications_only_on_wlan_summary">Only when connected to Wi-Fi</string>
    <string name="preferences_notifications_only_on_wlan">Only on Wi-Fi</string>
    <string-array name="autorefresh_labels">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>4 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="autorefresh_values" translateable="false">
        <item>1800</item>
        <item>3600</item>
        <item>7200</item>
        <item>14400</item>
        <item>86400</item>
    </string-array>

    <string name="preferences_upload">Uploading</string>
    <string name="preferences_upload_username">Username</string>
    <string name="preferences_upload_username_summary">Username used for uploading</string>
    
    <string-array name="cache_labels">
        <item>1 MB</item>
        <item>4 MB</item>
        <item>8 MB</item>
        <item>16 MB</item>
        <item>32 MB</item>
        <item>64 MB</item>
    </string-array>
    <string-array name="cache_values">
        <item>1048576</item>
        <item>4194304</item>
        <item>8388608</item>
        <item>16777216</item>
        <item>33554432</item>
        <item>67108864</item>
    </string-array>
</resources>