<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share_picture"
        android:icon="@drawable/ic_share_black"
        android:title="@string/share_picture"
        app:iconTint="?android:textColorSecondary"
        app:showAsAction="always" />

    <item
        android:id="@+id/download"
        android:icon="@drawable/ic_file_download"
        android:title="@string/download"
        app:iconTint="?android:textColorSecondary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share_link"
        android:title="@string/share_link" />

    <item
        android:id="@+id/copy_to_clipboard"
        android:title="@string/copy_url_to_clipboard" />


    <item
        android:id="@+id/star"
        android:checkable="true"
        android:icon="@drawable/star_empty"
        android:title="@string/star_frupic"
        app:showAsAction="always" />

    <item
        android:id="@+id/openinbrowser"
        android:title="@string/openinbrowser" />

    <item
        android:id="@+id/details"
        android:title="@string/details" />
</menu>