<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
        android:defaultValue="0"
        android:key="autorefresh_enabled"
        android:persistent="true"
        android:summary="@string/preferences_notifications_enabled_summary"
        android:title="@string/preferences_notifications" />
    
    <CheckBoxPreference
        android:defaultValue="0"
        android:key="refresh_only_on_wlan"
        android:dependency="autorefresh_enabled"
        android:persistent="true"
        android:summary="@string/preferences_notifications_only_on_wlan_summary"
        android:title="@string/preferences_notifications_only_on_wlan" />
    
    <ListPreference
        android:defaultValue="86400"
        android:dialogTitle="@string/preferences_notifications_autorefresh_interval_title"
        android:entries="@array/autorefresh_labels"
        android:entryValues="@array/autorefresh_values"
        android:key="autorefresh"
        android:persistent="true"
        android:dependency="autorefresh_enabled"
        android:title="@string/preferences_notifications_autorefresh_interval" />

</PreferenceScreen>