<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header android:fragment="de.saschahlusiak.frupic.preferences.FrupicCachePreferences"
        	android:icon="@drawable/ic_action_storage"
            android:title="@string/preferences_cache" />

    <header android:fragment="de.saschahlusiak.frupic.preferences.FrupicNotificationsPreferences"
        	android:icon="@drawable/ic_action_notifications"
            android:title="@string/preferences_notifications" />

    <header android:fragment="de.saschahlusiak.frupic.preferences.FrupicUploadPreferences"
        	android:icon="@drawable/ic_action_upload"
            android:title="@string/preferences_upload" />

    <header android:fragment="de.saschahlusiak.frupic.preferences.FrupicDisplayPreferences"
        	android:icon="@drawable/ic_action_brightness_medium"
            android:title="@string/preferences_display" />

    <header android:fragment="de.saschahlusiak.frupic.preferences.FrupicAboutPreferences"
        	android:icon="@drawable/ic_settings_about"
            android:title="@string/about_frupic" />
</preference-headers>

